# minor-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  train_model.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_url_results.py
app/: cache.py  config.py  dependencies.py  main.py
app/api/: email.py  health.py  router.py  scan.py
app/engines/: attachment_analyzer.py  text_analyzer.py  url_analyzer.py
app/engines/analyzers/: base.py
app/middleware/: auth.py
app/models/: __init__.py  email.py  fetch_state.py  scan.py  url_result.py
app/schemas/: email.py  scan.py
app/services/: email_service.py  scan_service.py
architecture/: phishing_guard_v2_architecture.excalidraw
data/: phishing_model.joblib  training_report.txt
docs/: PROJECT_DETAIL.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/charts/: ClassificationDonut.tsx  ThreatTimeline.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  JsonViewer.tsx  LoadingDots.tsx  ScoreBar.tsx  ScoreGauge.tsx  Toast.tsx
frontend/src/hooks/: useCountUp.ts  usePollScan.ts  useSystemHealth.ts  useToast.ts
frontend/src/pages/: ActiveScans.tsx  Dashboard.tsx  EmailInbox.tsx  HealthPage.tsx  ScanDetail.tsx  ScanResults.tsx  UrlAnalysis.tsx
frontend/src/types/: index.ts
frontend/src/utils/: virustotal.ts
scripts/: stamp_db.sh
tests/: test_email_service.py  test_scan_service.py  test_url_analyzer.py
