[project]
name = "phishing-guard"
version = "2.0.0"
description = "Email phishing detection system with ML-based text analysis"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "httpx>=0.27.0",
    "imapclient>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
# Attachment analysis (Phase 6 — deferred)
analysis = [
    "python-magic-bin>=0.4.14",
    "pefile>=2023.2.7",
    "olefile>=0.47",
    "yara-python>=4.5.0",
    "PyPDF2>=3.0.0",
]
# ML model training
ml = [
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
